--- a/css/gallery.css
+++ b/css/gallery.css
@@ -106,9 +106,10 @@
 	width: 100%;
 }
 .text_column {
-	padding-left: 20px;
+	/*padding-left: 20px;
 	padding-right: 20px;
-	width: 90%;
+	width: 90%;*/
+	font-size:0px;
 }
 .column {
 	width: 100%;
