--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,133 +1,35 @@
-@charset "UTF-8";
-/* About Section */
-.text_column {
-	width: 90%;
-	text-align: left;
-	font-weight: lighter;
-	line-height: 25px;
-	float: left;
-	padding-left: 20px;
-	padding-right: 20px;
-	color: #27ae60;
+.gallery{
+  display:grid;
+  grid-template-columns:1fr 1fr 1fr 1fr;
+  grid-column-gap:1em;
 }
-.gallery {
-	clear: both;
-	display: inline-block;
-	width: 100%;
-	background-color: #FFFFFF;
-
-	/* [disabled]min-width: 400px;
-*/
-	padding-bottom: 35px;
-	padding-top: 0px;
-	margin-top: 15px;
-	margin-bottom: 0px;
+.thumbnail a img{
+  width:100%;
+  padding:15px;
+  position:relative;
 }
-.thumbnail {
-	width: 23%;
-	text-align: center;
-	float: left;
-	margin-top: 35px;
-	background-color: #F8F8F8;
-	padding-bottom: 20px;
-	margin-left: 1%;
-	margin-right: 1%;
-	border-radius: 3px;
-	padding-top: 20px;
-	border-bottom: 4px solid #34495e;
+.thumbnail h4{
+  color:#333;
 }
-.gallery .thumbnail h4 {
-	margin-top: 5px;
-	margin-bottom: 5px;
-	color: #4b5158;
-	text-align: left;
-	padding-left: 20px;
-	padding-right: 20px;
+.thumbnail{
+  float:right;
+  width:95%;
+  margin:auto;
+  margin-bottom:1em;
+  border-bottom:2px solid #34495e;
 }
-.gallery .thumbnail p {
-	margin: 0;
-	color:#5D5E5D;
-	text-align: left;
-	padding-left: 20px;
+.text_column{
+  padding:15px;
+  font-size:15px;
+  color:#777;
 }
-.gallery .thumbnail .tag {
-	color: #5D5E5D;
-	padding-bottom: 4px;
-	padding-top: 4px;
-	text-align: left;
-	padding-left: 20px;
-	padding-right: 20px;
+.tag{
+  padding-left:8px;
 }
-.cards {
-	width: 100%;
-	height: auto;
-	max-width: 400px;
-	max-height: 200px;
-	opacity: 0.8;
-}
-
-/* Mobile */
-@media (max-width: 320px) {
-.text_column {
-	width: 100%;
-	text-align: justify;
-	padding: 0;
-}
-.intro .column p {
-	width: 80%;
-	margin-left: 0px;
-}
-.text_column {
-	padding-left: 20px;
-}
-.thumbnail {
-	width: 100%;
-}
-.column {
-	width: 100%;
-	margin-top: 0px;
-}
-
-/* Small Tablets */
-@media (min-width: 321px)and (max-width: 767px) {
-.text_column {
-	width: 100%;
-	text-align: left;
-	padding: 0;
-}
-.thumbnail {
-	width: 100%;
-}
-.column {
-	width: 100%;
-	margin-top: 0px;
-}
-.thumbnail {
-	width: 100%;
-}
-.text_column {
-	padding-left: 20px;
-	padding-right: 20px;
-	width: 90%;
-}
-.column {
-	width: 100%;
-	margin-left: 0px;
-	margin-right: 0px;
-}
-
-
-/* Small Desktops */
-@media (min-width: 768px) and (max-width: 1096px) {
-.text_column {
-	width: 100%;
-}
-.thumbnail {
-	width: 48%;
-}
-.text_column {
-	width: 90%;
-	margin: 0;
-	padding: 20px;
-}
+@media screen and (max-width:768px){
+  .gallery{
+    display:grid;
+    grid-template-columns:1fr;
+    grid-column-gap:1em;
+  }
 }
